tests/snapshots/integration_tests__safe_licenses_in_config_check.snap
---
source: tests/integration_tests.rs
expression: output
---

❌ The following dependencies are unsafe:

_sysroot_linux-aarch64_curr_repodata_hack 4-h57d6b7b_14 (noarch): LGPL-2.0-or-later AND LGPL-2.0-or-later WITH exceptions AND GPL-2.0-or-later AND MPL-2.0 (Non-SPDX)
binutils 2.40-h4852527_7 (linux-64): GPL-3.0-only 
binutils 2.40-hf1166c9_7 (linux-aarch64): GPL-3.0-only 
binutils_impl_linux-64 2.40-ha1999f0_7 (linux-64): GPL-3.0-only 
binutils_impl_linux-aarch64 2.40-hf54a868_7 (linux-aarch64): GPL-3.0-only 
bzip2 1.0.8-h10d778d_5 (osx-64): bzip2-1.0.6 
bzip2 1.0.8-h31becfc_5 (linux-aarch64): bzip2-1.0.6 
bzip2 1.0.8-h93a5062_5 (osx-arm64): bzip2-1.0.6 
bzip2 1.0.8-hcfcfb64_5 (win-64): bzip2-1.0.6 
bzip2 1.0.8-hd590300_5 (linux-64): bzip2-1.0.6 
ca-certificates 2024.6.2-h56e8100_0 (win-64): ISC 
ca-certificates 2024.6.2-h8857fd0_0 (osx-64): ISC 
ca-certificates 2024.6.2-hbcca054_0 (linux-64): ISC 
ca-certificates 2024.6.2-hcefe29a_0 (linux-aarch64): ISC 
ca-certificates 2024.6.2-hf0a4a13_0 (osx-arm64): ISC 
certifi 2024.6.2-pyhd8ed1ab_0 (noarch): ISC 
frozendict 2.4.4-py312h396f95a_0 (linux-aarch64): LGPL-3.0-only 
frozendict 2.4.4-py312h4389bb4_0 (win-64): LGPL-3.0-only 
frozendict 2.4.4-py312h7e5086c_0 (osx-arm64): LGPL-3.0-only 
frozendict 2.4.4-py312h9a8786e_0 (linux-64): LGPL-3.0-only 
frozendict 2.4.4-py312hbd25219_0 (osx-64): LGPL-3.0-only 
gcc_impl_linux-64 12.3.0-h58ffeeb_13 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
gcc_impl_linux-aarch64 12.3.0-h3d98823_13 (linux-aarch64): GPL-3.0-only WITH GCC-exception-3.1 
gfortran_impl_linux-64 12.3.0-h8f2110c_13 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
gfortran_impl_linux-aarch64 12.3.0-h97ebfd2_13 (linux-aarch64): GPL-3.0-only WITH GCC-exception-3.1 
gxx_impl_linux-64 12.3.0-h2a574ab_13 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
gxx_impl_linux-aarch64 12.3.0-hba91e99_13 (linux-aarch64): GPL-3.0-only WITH GCC-exception-3.1 
kernel-headers_linux-64 2.6.32-he073ed8_17 (noarch): LGPL-2.0-or-later AND LGPL-2.0-or-later WITH exceptions AND GPL-2.0-or-later AND MPL-2.0 (Non-SPDX)
kernel-headers_linux-aarch64 4.18.0-h5b4a56d_14 (noarch): LGPL-2.0-or-later AND LGPL-2.0-or-later WITH exceptions AND GPL-2.0-or-later AND MPL-2.0 (Non-SPDX)
keyutils 1.6.1-h166bdaf_0 (linux-64): LGPL-2.1-or-later 
keyutils 1.6.1-h4e544f5_0 (linux-aarch64): LGPL-2.1-or-later 
ld_impl_linux-64 2.40-hf3520f5_7 (linux-64): GPL-3.0-only 
ld_impl_linux-aarch64 2.40-h9fc2d93_7 (linux-aarch64): GPL-3.0-only 
libarchive 3.7.4-h20e244c_0 (osx-64): BSD-2-Clause 
libarchive 3.7.4-h2c0effa_0 (linux-aarch64): BSD-2-Clause 
libarchive 3.7.4-h83d404f_0 (osx-arm64): BSD-2-Clause 
libarchive 3.7.4-haf234dc_0 (win-64): BSD-2-Clause 
libarchive 3.7.4-hfca40fe_0 (linux-64): BSD-2-Clause 
libcurl 8.8.0-h4e8248e_1 (linux-aarch64): curl 
libcurl 8.8.0-h7b6f9a7_1 (osx-arm64): curl 
libcurl 8.8.0-hca28451_1 (linux-64): curl 
libcurl 8.8.0-hd5e4a3a_1 (win-64): curl 
libcurl 8.8.0-hf9fcc65_1 (osx-64): curl 
libcxx 17.0.6-h5f092b4_0 (osx-arm64): Apache-2.0 WITH LLVM-exception 
libcxx 17.0.6-h88467a6_0 (osx-64): Apache-2.0 WITH LLVM-exception 
libedit 3.1.20191231-h0678c8f_2 (osx-64): BSD-2-Clause 
libedit 3.1.20191231-hc8eb9b7_2 (osx-arm64): BSD-2-Clause 
libedit 3.1.20191231-he28a2e2_2 (linux-64): BSD-2-Clause 
libedit 3.1.20191231-he28a2e2_2 (linux-aarch64): BSD-2-Clause 
libev 4.33-h10d778d_2 (osx-64): BSD-2-Clause 
libev 4.33-h31becfc_2 (linux-aarch64): BSD-2-Clause 
libev 4.33-h93a5062_2 (osx-arm64): BSD-2-Clause 
libev 4.33-hd590300_2 (linux-64): BSD-2-Clause 
libgcc-devel_linux-64 12.3.0-h6b66f73_113 (noarch): GPL-3.0-only WITH GCC-exception-3.1 
libgcc-devel_linux-aarch64 12.3.0-h6144e03_113 (noarch): GPL-3.0-only WITH GCC-exception-3.1 
libgcc-ng 14.1.0-h77fa898_0 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
libgcc-ng 14.1.0-he277a41_0 (linux-aarch64): GPL-3.0-only WITH GCC-exception-3.1 
libgfortran5 14.1.0-h9420597_0 (linux-aarch64): GPL-3.0-only WITH GCC-exception-3.1 
libgfortran5 14.1.0-hc5f4f2c_0 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
libglib 2.80.2-h59d46d9_1 (osx-arm64): LGPL-2.1-or-later 
libglib 2.80.2-h7025463_1 (win-64): LGPL-2.1-or-later 
libgomp 14.1.0-h77fa898_0 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
libgomp 14.1.0-he277a41_0 (linux-aarch64): GPL-3.0-only WITH GCC-exception-3.1 
libiconv 1.17-h0d3ecfb_2 (osx-arm64): LGPL-2.1-only 
libiconv 1.17-h31becfc_2 (linux-aarch64): LGPL-2.1-only 
libiconv 1.17-hcfcfb64_2 (win-64): LGPL-2.1-only 
libiconv 1.17-hd590300_2 (linux-64): LGPL-2.1-only 
libiconv 1.17-hd75f5a5_2 (osx-64): LGPL-2.1-only 
libintl 0.22.5-h5728263_2 (win-64): LGPL-2.1-or-later 
libintl 0.22.5-h8fbad5d_2 (osx-arm64): LGPL-2.1-or-later 
libnsl 2.0.1-h31becfc_0 (linux-aarch64): LGPL-2.1-only 
libnsl 2.0.1-hd590300_0 (linux-64): LGPL-2.1-only 
libsanitizer 12.3.0-h57e2e72_13 (linux-aarch64): GPL-3.0-only WITH GCC-exception-3.1 
libsanitizer 12.3.0-hb8811af_13 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
libstdcxx-devel_linux-64 12.3.0-h6b66f73_113 (noarch): GPL-3.0-only WITH GCC-exception-3.1 
libstdcxx-devel_linux-aarch64 12.3.0-h6144e03_113 (noarch): GPL-3.0-only WITH GCC-exception-3.1 
libstdcxx-ng 14.1.0-h3f4de04_0 (linux-aarch64): GPL-3.0-only WITH GCC-exception-3.1 
libstdcxx-ng 14.1.0-hc0a3c3a_0 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
libxcrypt 4.4.36-h31becfc_1 (linux-aarch64): LGPL-2.1-or-later 
libxcrypt 4.4.36-hd590300_1 (linux-64): LGPL-2.1-or-later 
libzlib 1.3.1-h2466b09_1 (win-64): Zlib 
libzlib 1.3.1-h4ab18f5_1 (linux-64): Zlib 
libzlib 1.3.1-h68df207_1 (linux-aarch64): Zlib 
libzlib 1.3.1-h87427d6_1 (osx-64): Zlib 
libzlib 1.3.1-hfb2fe0b_1 (osx-arm64): Zlib 
lz4-c 1.9.4-hb7217d7_0 (osx-arm64): BSD-2-Clause 
lz4-c 1.9.4-hcb278e6_0 (linux-64): BSD-2-Clause 
lz4-c 1.9.4-hcfcfb64_0 (win-64): BSD-2-Clause 
lz4-c 1.9.4-hd600fc2_0 (linux-aarch64): BSD-2-Clause 
lz4-c 1.9.4-hf0c8a7f_0 (osx-64): BSD-2-Clause 
lzo 2.10-h10d778d_1001 (osx-64): GPL-2.0-or-later 
lzo 2.10-h31becfc_1001 (linux-aarch64): GPL-2.0-or-later 
lzo 2.10-h93a5062_1001 (osx-arm64): GPL-2.0-or-later 
lzo 2.10-hcfcfb64_1001 (win-64): GPL-2.0-or-later 
lzo 2.10-hd590300_1001 (linux-64): GPL-2.0-or-later 
m2w64-gcc-libgfortran 5.3.0-6 (win-64): GPL, LGPL, FDL, custom (Non-SPDX)
m2w64-gcc-libs 5.3.0-7 (win-64): GPL3+, partial:GCCRLE, partial:LGPL2+ (Non-SPDX)
m2w64-gcc-libs-core 5.3.0-7 (win-64): GPL3+, partial:GCCRLE, partial:LGPL2+ (Non-SPDX)
m2w64-gmp 6.1.0-2 (win-64): LGPL3 (Non-SPDX)
m2w64-libwinpthread-git 5.0.0.4634.697f757-2 (win-64): MIT, BSD (Non-SPDX)
micromamba 1.5.8-0 (linux-64): BSD-3-Clause AND MIT AND OpenSSL 
micromamba 1.5.8-0 (linux-aarch64): BSD-3-Clause AND MIT AND OpenSSL 
micromamba 1.5.8-0 (osx-64): BSD-3-Clause AND MIT AND OpenSSL 
micromamba 1.5.8-0 (osx-arm64): BSD-3-Clause AND MIT AND OpenSSL 
micromamba 1.5.8-0 (win-64): BSD-3-Clause AND MIT AND OpenSSL 
msys2-conda-epoch 20160418-1 (win-64): None (Non-SPDX)
ncurses 6.5-h0425590_0 (linux-aarch64): X11 AND BSD-3-Clause 
ncurses 6.5-h5846eda_0 (osx-64): X11 AND BSD-3-Clause 
ncurses 6.5-h59595ed_0 (linux-64): X11 AND BSD-3-Clause 
ncurses 6.5-hb89a1cb_0 (osx-arm64): X11 AND BSD-3-Clause 
pkg-config 0.29.2-h2bf4dc2_1008 (win-64): GPL-2.0-or-later 
pkg-config 0.29.2-h36c2ea0_1008 (linux-64): GPL-2.0-or-later 
pkg-config 0.29.2-ha3d46e9_1008 (osx-64): GPL-2.0-or-later 
pkg-config 0.29.2-hab62308_1008 (osx-arm64): GPL-2.0-or-later 
pkg-config 0.29.2-hb9de7d4_1008 (linux-aarch64): GPL-2.0-or-later 
python 3.12.4-h194c7f8_0_cpython (linux-64): Python-2.0 
python 3.12.4-h30c5eda_0_cpython (osx-arm64): Python-2.0 
python 3.12.4-h37a9e06_0_cpython (osx-64): Python-2.0 
python 3.12.4-h829453d_0_cpython (linux-aarch64): Python-2.0 
python 3.12.4-h889d299_0_cpython (win-64): Python-2.0 
readline 8.2-h8228510_1 (linux-64): GPL-3.0-only 
readline 8.2-h8fc344f_1 (linux-aarch64): GPL-3.0-only 
readline 8.2-h92ec313_1 (osx-arm64): GPL-3.0-only 
readline 8.2-h9e318b2_1 (osx-64): GPL-3.0-only 
sysroot_linux-64 2.12-he073ed8_17 (noarch): LGPL-2.0-or-later AND LGPL-2.0-or-later WITH exceptions AND GPL-2.0-or-later AND MPL-2.0 (Non-SPDX)
sysroot_linux-aarch64 2.17-h5b4a56d_14 (noarch): LGPL-2.0-or-later AND LGPL-2.0-or-later WITH exceptions AND GPL-2.0-or-later AND MPL-2.0 (Non-SPDX)
tk 8.6.13-h194ca79_0 (linux-aarch64): TCL 
tk 8.6.13-h1abcd95_1 (osx-64): TCL 
tk 8.6.13-h5083fa2_1 (osx-arm64): TCL 
tk 8.6.13-h5226925_1 (win-64): TCL 
tk 8.6.13-noxft_h4845f30_101 (linux-64): TCL 
tzdata 2024a-h0c530f3_0 (noarch): LicenseRef-Public-Domain 
ucrt 10.0.22621.0-h57928b3_0 (win-64): LicenseRef-Proprietary 
vc14_runtime 14.40.33810-ha82c5b3_20 (win-64): LicenseRef-ProprietaryMicrosoft 
win_inet_pton 1.1.0-pyhd8ed1ab_6 (noarch): PUBLIC-DOMAIN (Non-SPDX)
xz 5.2.6-h166bdaf_0 (linux-64): LGPL-2.1 and GPL-2.0 (Non-SPDX)
xz 5.2.6-h57fd34a_0 (osx-arm64): LGPL-2.1 and GPL-2.0 (Non-SPDX)
xz 5.2.6-h775f41a_0 (osx-64): LGPL-2.1 and GPL-2.0 (Non-SPDX)
xz 5.2.6-h8d14728_0 (win-64): LGPL-2.1 and GPL-2.0 (Non-SPDX)
xz 5.2.6-h9cdd2b7_0 (linux-aarch64): LGPL-2.1 and GPL-2.0 (Non-SPDX)
zlib 1.3.1-h4ab18f5_1 (linux-64): Zlib 
zlib 1.3.1-h68df207_1 (linux-aarch64): Zlib 
zlib 1.3.1-h87427d6_1 (osx-64): Zlib 
zlib 1.3.1-hfb2fe0b_1 (osx-arm64): Zlib 

❌ Unsafe licenses found! ❌
There were 255 safe licenses and 144 unsafe licenses.
